Simplify and fix hover on small downloadbutton

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -32,14 +32,8 @@ body {
   text-decoration: none;
 }
 
-.smalldownloadButton {
-  background-color: rgb(131, 206, 235);
+.downloadButton.small {
   padding: 5px 8px;
-  color: #fff;
-  border: 2px solid rgb(110, 173, 198);
-  border-radius: 4px;
-  display: inline-block;
-  text-decoration: none;
   font-size: 12px;
 }
 
